--- a/notebooks/Models.ipynb
+++ b/notebooks/Models.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adult-phenomenon",
+   "id": "veterinary-croatia",
    "metadata": {},
    "source": [
     "### Baseline Model"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "wound-reminder",
+   "id": "worth-japan",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:03:40.633174Z",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "alive-disabled",
+   "id": "beneficial-lucas",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:03:41.179460Z",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "surgical-atlanta",
+   "id": "pressed-michigan",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:03:44.508204Z",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "vertical-plumbing",
+   "id": "artificial-mouth",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:03:51.054613Z",
@@ -179,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "reliable-saturn",
+   "execution_count": 155,
+   "id": "sensitive-edmonton",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-11T21:03:51.475316Z",
-     "start_time": "2021-05-11T21:03:51.412952Z"
+     "end_time": "2021-05-11T21:20:48.328334Z",
+     "start_time": "2021-05-11T21:20:48.263521Z"
     }
    },
    "outputs": [
@@ -192,19 +192,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline Logistic Regression; Test F1: 0.00000, Test AUC: 0.62473\n"
+      "Baseline Logistic Regression; Test F1: 0.000000000, Test AUC: 0.62473\n"
      ]
     }
    ],
    "source": [
-    "print('Baseline Logistic Regression; Test F1: %.5f, Test AUC: %.5f' % \\\n",
+    "print('Baseline Logistic Regression; Test F1: %.9f, Test AUC: %.5f' % \\\n",
     "      (f1_score(y_base_test, lr_base.predict(X_base_test)), roc_auc_score(y_base_test, lr_base.predict_proba(X_base_test)[:,1]))) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "qualified-sphere",
+   "id": "national-force",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:03:51.849880Z",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-energy",
+   "id": "studied-spelling",
    "metadata": {},
    "source": [
     "### Load data and add domain features"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "intended-compilation",
+   "id": "cross-episode",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T14:22:50.289254Z",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "mighty-justice",
+   "id": "systematic-church",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T14:23:44.641170Z",
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "meaning-collector",
+   "id": "accepting-relative",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T14:26:49.188865Z",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "incorporate-implementation",
+   "id": "mexican-drilling",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T19:34:10.284737Z",
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposite-attack",
+   "id": "provincial-cover",
    "metadata": {},
    "source": [
     "---"
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "allied-chess",
+   "id": "guilty-builder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-composition",
+   "id": "swiss-motor",
    "metadata": {},
    "source": [
     "### KNN"
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "typical-bridal",
+   "id": "pretty-soundtrack",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T20:22:38.737505Z",
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "universal-collar",
+   "id": "standing-civilian",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T20:27:31.220787Z",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "correct-hawaiian",
+   "id": "first-newark",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T20:32:53.799755Z",
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "representative-bread",
+   "id": "nervous-stanley",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T20:37:02.480273Z",
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "approved-swing",
+   "id": "bronze-ensemble",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:18:56.106496Z",
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instructional-appliance",
+   "id": "european-framework",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "expensive-corruption",
+   "id": "roman-albert",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:22:09.522346Z",
@@ -1599,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "helpful-offense",
+   "id": "equivalent-permit",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T15:19:00.941635Z",
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fifty-liquid",
+   "id": "modern-trout",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:05:12.467459Z",
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "wound-prevention",
+   "id": "polar-fence",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:14:45.406156Z",
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "insured-hampshire",
+   "id": "atomic-nowhere",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T19:11:42.642922Z",
@@ -1842,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enabling-utility",
+   "id": "extreme-necessity",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceramic-federal",
+   "id": "fatal-butter",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "superior-champagne",
+   "id": "informative-tunnel",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "close-attempt",
+   "id": "clean-benchmark",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:24:08.200216Z",
@@ -1897,7 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "floating-compression",
+   "id": "stone-proxy",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:24:19.630972Z",
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "common-estonia",
+   "id": "outstanding-surprise",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:26:17.018543Z",
@@ -1995,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "meaningful-shoot",
+   "id": "possible-behalf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:42:35.269661Z",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "subtle-pendant",
+   "id": "purple-rotation",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:44:21.985234Z",
@@ -2026,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "immediate-minutes",
+   "id": "unusual-latin",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T19:12:32.847151Z",
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-shape",
+   "id": "median-briefs",
    "metadata": {},
    "source": [
     "### Extra: Multi-layer Perceptron classifier"
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "italian-record",
+   "id": "resident-lying",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T16:58:29.751030Z",
@@ -2064,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "reserved-dollar",
+   "id": "dress-pound",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T17:23:02.384686Z",
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "congressional-bacon",
+   "id": "controlling-sullivan",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2101,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acceptable-garbage",
+   "id": "bridal-university",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2109,14 +2109,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intellectual-intensity",
+   "id": "competent-newcastle",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "respected-coast",
+   "id": "cheap-senator",
    "metadata": {},
    "source": [
     "### ROC Curve"
@@ -2125,7 +2125,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "affiliated-christopher",
+   "id": "proud-approval",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T20:41:30.723928Z",
@@ -2168,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "strong-montreal",
+   "id": "junior-escape",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-05-11T21:04:09.962863Z",
@@ -2209,7 +2209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beneficial-complexity",
+   "id": "geographic-enterprise",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2217,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "korean-traffic",
+   "id": "aware-municipality",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2225,7 +2225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nuclear-biotechnology",
+   "id": "solar-arrangement",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2233,7 +2233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "allied-verification",
+   "id": "marked-perspective",
    "metadata": {},
    "outputs": [],
    "source": []
